# wiseman-auto-sys

./: .firebaserc  .flake8  .gitignore  CLAUDE.md  README.md  TESTING-WINDOWS.md  firebase.json  pyproject.toml  wiseman_hub.spec  wiseman_launcher.spec
.github/workflows/: build-windows-smoke.yml  release.yml  test-unit.yml  test-windows-integration.yml  test-windows-ui.yml
backend/ocr_proxy/: .dockerignore  Dockerfile  README.md  deploy.md  requirements.txt
backend/ocr_proxy/app/: __init__.py  auth.py  config.py  main.py  models.py  ocr.py
backend/ocr_proxy/tests/: test_auth.py  test_config.py  test_main.py  test_ocr.py  test_rate_limit.py
config/: default.toml  default.toml.sample  test.toml.example
data/ui_catalogs/: 01_system_selector.json  01_system_selector.txt  02_care_main.json  02_care_main.txt  03_new_registration.json  03_new_registration.txt  20260401_003924_通所・訪問リハビリ管理システム_SP(ケア記録)_[テスト施設].json  20260401_003924_通所・訪問リハビリ管理システム_SP(ケア記録)_[テスト施設].txt
docs/: prd.md  wiseman-system-spec.md
docs/adr/: 001-rpa-library-selection.md  002-packaging-tool.md  003-gcp-service-selection.md  004-auto-update-mechanism.md  005-config-format.md  006-asp-automation-strategy.md  007-auth-design-change.md  008-ocr-backend.md  009-ui-technology.md  010-human-confirmation-state.md  011-distribution-format.md  012-facility-merger-output-format.md  013-facility-root-bulk-merge.md  014-ex-extractor-integration.md  015-staff-path-cache.md  016-windows-appliance-and-mac-dev-flow.md  017-test-retry-policy-for-windows-av-interference.md
docs/handoff/: 14a-build.md  14c-deploy.md  1c-exe-redistribution-runbook.md  LATEST.md  ex-test-fixtures.md  facility-mapping-draft.md  facility-mapping-sync-runbook.md  folder-merger-mvp-runbook.md  folder-merger-mvp-testing.md  pr5-ex-extractor-runbook.md  session26-pr126-windows-runbook.md  session32-pr5-ex-extractor-ac1-resume.md  staff-path-cache-runbook.md  windows-e2e-task10.md
docs/handoff/archive/: 2026-04-history.md  session-44-c-business-ux-strengthening.md  session-45-adr-016-phase-0-1-2-5a.md  session-46-adr-016-phase-3-4a.md  session-52-phase-6-pre-gate-completion.md  session-57-teamviewer-defer-and-phase6-ready.md  session-59-issue-238-phase2a-launcher-summary.md  session-61-issue-238-close-phase3-triage.md  session-63-issue-250-net-minus-4.md  session-65-issue-27-cascade-completion.md  session-66-issue-27-cd-issue-29-completion.md  session-69-issue-27-phase-3b-frozen.md  session-72-handoff-debt-6-issue-27-f.md  session-74-issue-27-phase-1-path-migration.md  session-76-issue-27-phase-2b-facility-root.md  session-79-b-c-dialog-dry-xlsx-visibility.md  session-81-multi-staff-t2-t10-merge.md  session-86-issue-27-datetime-and-issue-11-m2m6.md  session-89-issue-274-closed.md
docs/help-site/: DISTRIBUTION.md  README.md  REVIEW.md  _coverpage.md  _meta.json  _navbar.md  _sidebar.md  changelog.md  faq.md  glossary.md  index.html  troubleshooting.md
docs/help-site/guide/: checklist-b.md  checklist-c.md  ex-extractor.md  facility-merger.md  overview.md  settings.md
docs/runbook/: gcp-iam-setup.md  workload-identity-federation-setup.md
docs/specs/: issue-275-hearing.md
docs/ui-mockups/: confirm-dialog-spec.md
mock_wiseman_app/: WisemanMock.sln
mock_wiseman_app/WisemanMock/: CareRecordForm.cs  ConfirmDialog.cs  LauncherForm.cs  LoginForm.cs  MainForm.cs  MockData.cs  NewRegistrationForm.cs  Program.cs  SaveCsvDialog.cs  WisemanMock.csproj
mock_wiseman_app/WisemanMock/Properties/: AssemblyInfo.cs
scripts/: build_routing_json.py  check_gcp_access.py  checklist_b_dryrun.py  checklist_c_cache_view.py  checklist_c_dryrun.py  create_shortcut.ps1  debug_btnprint.py  deploy-windows.ps1  diagnose-tcl.ps1  draft_facility_mapping.py  dump_ui.py  generate_icon.py  init_gcs_report_staff.py  inspect_catalog.py  merge_facility.py  merge_user_pdfs.py  process_ex_files.py  setup-windows.ps1  smoke_real.py
scripts/release/: generate_manifest.py
specs/c-business-deployment/: spec.md  tasks.md
src/wiseman_hub/: __init__.py  __main__.py  app.py  audit.py  config.py
src/wiseman_hub/cloud/: audit_uploader.py  env_scanner.py  mapping_sync.py  sheet_list_cache.py  sheets.py  storage.py  sync_label.py  xlsx_path_cache_mirror.py
src/wiseman_hub/pdf/: __init__.py  checklist_b.py  checklist_c.py  ex_extractor.py  excel_com.py  facility_bulk_runner.py  facility_merger.py  facility_resolver.py  facility_scanner.py  matcher.py  merger.py  ocr_client.py  pipeline.py  review_flow.py  session.py  splitter.py  staff_path_scanner.py  text_name_extractor.py  year_folder.py
src/wiseman_hub/rpa/: __init__.py  base.py  inspector.py  mock_engine.py  pywinauto_engine.py  window_utils.py
src/wiseman_hub/ui/: checklist_b_dialog.py  checklist_c_dialog.py  checklist_settings_dialog.py  common.py  confirm_dialog.py  ex_extractor_dialog.py  facility_merger_dialog.py  facility_root_dialog.py  launcher.py  manual_distribution_dialog.py  placement_confirm_dialog.py  session_picker.py  settings.py  sheet_list_binding.py  staff_picker_dialog.py  xlsx_picker_dialog.py
src/wiseman_hub/utils/: atomic_io.py  os_open.py  text_norm.py
src/wiseman_hub_launcher/: __init__.py  __main__.py  checksum.py  current.py  manifest.py  updater.py
src/wiseman_hub_launcher/_runtime/: __init__.py  _atomic_io.py  lock.py  spawn.py
src/wiseman_hub_launcher/_supply_chain/: __init__.py  _http.py  download.py  policy.py  provenance.py  sigstore.py
tests/integration/: conftest.py  test_close_window.py  test_export_csv.py  test_full_pipeline.py  test_launch.py  test_login.py  test_navigate_menu.py  test_new_registration_flow.py  test_read_grid.py  test_smoke_real.py
tests/unit/: test_app.py  test_audit.py  test_config.py  test_inspector.py  test_main_entrypoint.py  test_merge_user_pdfs_cli.py  test_mock_engine.py  test_process_ex_files.py  test_pywinauto_engine.py  test_smoke_mode.py
tests/unit/cloud/: test_audit_uploader.py  test_env_scanner.py  test_mapping_sync.py  test_sheet_list_cache.py  test_sync_label.py  test_xlsx_path_cache_mirror.py
tests/unit/launcher/: test_checksum.py  (+9 more)
(+47 files in other folders)
