[project]
name = "wiseman-hub"
version = "0.1.0"
description = "Wiseman介護ソフト自動化ブリッジ - pywinauto RPA + GCPクラウド連携"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "yyyhhh" }]

dependencies = [
    # RPA (Windows Desktop Automation)
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    # GCP
    "google-cloud-storage>=2.18.0",
    "google-cloud-pubsub>=2.23.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Desktop UI
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    # Data
    "pandas>=2.2.0",
    # PDF (分割・再結合・画像切出)
    "pymupdf>=1.24.0",
    # HTTP クライアント (Cloud Run OCR プロキシ呼出)
    "httpx>=0.27.0",
    # TOML (Python <3.11 fallback)
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.2.0",
    "pyinstaller>=6.11.0",
]

[project.scripts]
wiseman-hub = "wiseman_hub.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
# strict チェック対象を src/ に限定（CLAUDE.md の「Type check: mypy src/」と整合）
# `mypy .` と指定しても下記パスは自動除外される（`mypy src/` と同等の結果）:
# - backend/ocr_proxy: 独立 Cloud Run サービスで別コンテナ。ルートの mypy 対象外
# - tests/: テストコードでは strict 型アノテーションを必須としない（pytest fixture 等で冗長）
# - scripts/: 将来の CLI スクリプト配置予定、strict 対象外
exclude = ["^backend/", "^tests/", "^scripts/"]
# スタブが存在しないサードパーティライブラリのimportエラーを許容
# GA移行時にスタブ追加またはstub-onlyパッケージ導入で strict 完全対応する
disable_error_code = ["import-untyped", "import-not-found"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
markers = [
    "integration: Windows-only integration tests requiring mock WinForms app",
]
